# huit-ondemand-user-docs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: file-management.md  index.md  interactive-apps.md  jupyterlab-apptainer.md  jupyterlab-spack.md  package-management.md  remote-desktop-ros.md  shared-folder.md  spack-course-shared.md  spack-local.md  spack-shared-software.md  terminal.md  troubleshooting.md  vscode-app.md
file-management/: index.html
interactive-apps/: index.html
jupyterlab-apptainer/: index.html
jupyterlab-spack/: index.html
package-management/: index.html
remote-desktop-ros/: index.html
search/: search_index.json
shared-folder/: index.html
spack-course-shared/: index.html
spack-local/: index.html
spack-shared-software/: index.html
stylesheets/: extra.css
terminal/: index.html
troubleshooting/: index.html
vscode-app/: index.html
